# MarioBros-Ballestrinque

./: .gitignore  CMakeLists.txt  Mail Entrega Corregida.txt  Makefile  MarioBros-Ballestrinque  MarioBros-Ballestrinque.cbp  README.md  config2.xml  logfile_cliente.txt  logfile_servidor.txt  windows-obtener_dll.sh
Google_tests/: CMakeLists.txt  ClienteTest.cpp  Google_tests.cbp  ServidorTest.cpp  TestBasico.cpp
Google_tests/lib/: googletest-distribution.cbp
Google_tests/lib/googlemock/: gmock.cbp
Google_tests/lib/googletest/: gtest.cbp
include/: Background.h  Camara.h  Cliente.h  Colisionador.h  Dibujador.h  Enemigo.h  Escenario.h  Goomba.h  Hongo.h  Juego.h  Jugador.h  Koopa.h  Ladrillo.h  LectorXML.h  Log.h  Logger.h  Mensajes.h  Moneda.h  Renderer.h  ReproductorDeSonido.h  Servidor.h  Sorpresa.h  Temporizador.h  TextWriter.h  Texturas.h  Tortuga.h  Tuberia.h
res/: config.xml
src/: Background.cpp  Camara.cpp  Cliente.cpp  Colisionador.cpp  Dibujador.cpp  Enemigo.cpp  Escenario.cpp  Goomba.cpp  Hongo.cpp  Juego.cpp  Jugador.cpp  Koopa.cpp  Ladrillo.cpp  LectorXML.cpp  Log.cpp  Logger.cpp  Moneda.cpp  Renderer.cpp  ReproductorDeSonido.cpp  Servidor.cpp  Sorpresa.cpp  Temporizador.cpp  TextWriter.cpp  Tortuga.cpp  Tuberia.cpp  main.cpp
